2008-10-09  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * INSTALL
    Fix minor typo. Thanks to Sean Wood.

2008-09-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_sinc.c
    Optimization. About a 5% improvement in throughput.

2008-09-26  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/util.[ch]
    Add function print_cpu_name.

    * tests/throughput_test.c
    Add ability to do best-of N runs, print CPU type.

2008-09-17  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Add AC_PROG_MKDIR_P.

2008-07-10  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.c
    Fix a valgrind warning which occured when the call back function returns
    a count of zero without modifying the pointer value. Thanks to Paul Kelly.

    * tests/callback_test.c
    Add a callback test where the callback returns a zero count without setting
    the data pointer. The problem can only be detected when run under valgrind.

2008-07-09  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/src_sinc.c
    Remove use of llrint because sizeof (increment_t) is guaranteed not to be 8.

    * tests/callback_test.c
    Test with 2 channels for improved generality. Simplify setup.

    * src/src_linear.c src/src_zoh.c
    Change local variable names to be the same across these two files for easier
    comparison.

    * src/src_linear.c
    Fix a bug where the the converter was reading beyond the end of the input.
    Thanks to Paul Kelly for the bug report.

2008-07-02  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/downsample_test.c
    New test file to test for buffer overrun bugs at extreme low conversion
    ratios.

    * tests/Makefile.am
    Hook above test program into build.

    * src/src_sinc.c
    Fix buffer overrrun bug at extreme low conversion ratios. Thanks to Russell
    O'Connor for the report.

    * configure.ac NEWS README doc/*.html
    Update for 0.1.4 release.
