@@ -1,3 +1,8 @@
+2008-10-17  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * doc/faq.html
+    Add Q/A about accuracy of src_ratio field of SRC_DATA struct.
+
 2008-10-09  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * INSTALL
